# Data-Curation-Final-Project

./: .dockerignore  .env.example  Dockerfile  README.md  colossus_map.html  docker-compose.yml  earth_engine_test.py  pyproject.toml  render_map.py
.github/workflows/: reproducibility.yml
data/: colossus.json
data/metadata/: combined_analysis_2022_2023.json  combined_analysis_2024_2025.json
data/processed/: cecil.json  cecil_subscriptions.json
outputs/maps/: colossus_map.html
outputs/reports/: final_report_20251210_221250.md  memphis_land_usage_report_20251208_134815.md  temporal_report_20251209_012526.md
src/maps/: upload_felt.py
src/notebooks/: cecil_analysis.py  combined_analysis.py  earth_engine_test.py
src/utils/: cecil_api_calls.py  cecil_datasets.py  render_map.py
