[project]
name = "final-project"
version = "0.1.0"
description = "Manojit Nandi's final project for Foundation of Data Curation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "anthropic>=0.75.0",
    "cecil>=0.0.21",
    "earthengine-api>=1.6.9",
    "felt-python>=0.1.2",
    "geedim>=2.0.0",
    "geemap>=0.36.3",
    "geopandas>=1.1.1",
    "marimo>=0.15.3",
    "polars>=1.35.2",
    "pystac>=1.14.1",
    "python-dotenv>=1.1.1",
    "rioxarray>=0.19.0",
    "scipy>=1.16.3",
    "tabulate>=0.9.0",
    "vl-convert-python>=1.8.0",
    "xarray>=2025.6.1",
    "xee>=0.0.23",
]

[tool.marimo.runtime]
dotenv = [".env", ".env.testing"]
